--- a/Pet/pom.xml
+++ b/Pet/pom.xml
@@ -68,26 +68,45 @@
         </dependency>
 
         <!--接口文档依赖-->
+        <!--<dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+            <version>2.0.2</version>
+        </dependency>-->
+
+
         <dependency>
             <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>2.10.5</version>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
         </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.10.5</version>
-        </dependency>
-        <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-annotations</artifactId>
-            <version>1.5.24</version>
-        </dependency>
-        <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-models</artifactId>
-            <version>1.5.24</version>
-        </dependency>
+
+        <!--
+         <dependency>
+             <groupId>io.springfox</groupId>
+             <artifactId>springfox-swagger2</artifactId>
+             <version>2.10.5</version>
+         </dependency>
+         <dependency>
+             <groupId>io.springfox</groupId>
+             <artifactId>springfox-swagger-ui</artifactId>
+             <version>2.10.5</version>
+         </dependency>
+         <dependency>
+             <groupId>io.swagger</groupId>
+             <artifactId>swagger-annotations</artifactId>
+             <version>1.5.24</version>
+         </dependency>
+         <dependency>
+             <groupId>io.swagger</groupId>
+             <artifactId>swagger-models</artifactId>
+             <version>1.5.24</version>
+         </dependency>-->
 
 
     </dependencies>
