--- a/Pet/src/main/resources/application.yml
+++ b/Pet/src/main/resources/application.yml
@@ -1,8 +1,19 @@
 # 应用服务 WEB 访问端口
 server:
   port: 8080
+# swagger配置访问路径
+# http://localhost:8080/documentation/swagger-ui/index.html
+springfox:
+  documentation:
+    swagger-ui:
+      enabled: true
+      base-url: /documentation
 
 spring:
+  # swagger3配置
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
   # 数据库配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -27,7 +38,7 @@ spring:
 #mybatis-plus配置
 mybatis-plus:
   # Mapper扫描位置
-  mapper-locations: classpath*:mapper/**/pet/*.xml
+  mapper-locations: classpath*:mapper/*.xml
   # 实体类扫描位置
   type-aliases-package: com.pet.entity
   configuration:
@@ -41,3 +52,6 @@ mybatis-plus:
     db-config:
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
+      logic-delete-field: deleted
+
+
